--- a/src/main/resources/templates/fragments/fragmentos.html
+++ b/src/main/resources/templates/fragments/fragmentos.html
@@ -13,6 +13,9 @@
           <li class="nav-item">
             <a class="nav-link text-white m-1" href="/disciplinas">Disciplinas</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-white m-1" href="/cadastro">Nova Disciplina</a>
+          </li>
         </ul>
       </div>
     </div>
